[package]
name = "actix-token-middleware"
description = "token middleware for protecting url under actix-web"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
version = "0.3.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["rustls"] }
actix-utils = "3"
jsonwebkey = { version = "0.3", features = ["jwt-convert"] }
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
serde-vecmap = "0.1.0"
awc = { version = "3", features = ["rustls"] }

[dev-dependencies]
actix-rt = "1"

[patch.crates-io]
# serde-vecmap = { git = "https://github.com/eburghar/serde-vecmap.git", branch = "master" }
serde-vecmap = { path = "../serde-vecmap" }
